Sun Aug 10 14:19:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp:
	* src/QGaimAccountsWindow.h:
	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - QToolButton -> QAction.

Sun Aug 10 13:57:10 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	  - Moved Show Offline Buddies into a settings/display menu.

Sun Aug 10 01:35:06 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Disabled the User Actions button.

Sun Aug 10 01:33:11 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - The last character in the text sent is no longer stripped when
	    pressing the Send button instead of pressing Enter.

Sun Aug 10 01:25:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Event unseen types are now handled.
	  - Synced with the 0.67cvs API changes.

Sat Aug 09 23:11:03 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/main.cpp:
	  - Added the #ifdef LOCAL_COMPILE back.
	  - Moved the QMainWindow initialization before the core init.

Sat Aug 09 23:08:44 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Fixed the bug where the active conversation index was returning
	    a very wrong value, which made closing tabs and stuff not work.

Sat Aug 09 00:40:22 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimConvWindow.cpp:
	  - Fixed a crash when trying to get a protocol icon for a buddy not on
	    your list.

Sat Aug 09 00:03:19 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* gaim.pro:
	* make.sh:
	  - The code can now detect between cross-compiles and native compiles
	    when called from the packaging scripts bundled in qpe-gaim.

Fri Aug 08 23:39:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
